// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render component ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     with a total of 
    $2.00
  </h1>
</div>
`;

exports[`Should render component ExpensesSummary with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     with a total of 
    $1.00
  </h1>
</div>
`;
